syntax = "proto3";
import "google/protobuf/wrappers.proto";
package simple;

message SimpleWithWrappers {
  google.protobuf.StringValue name = 1;
  google.protobuf.Int32Value age = 2;
  google.protobuf.BoolValue enabled = 3;
  google.protobuf.Int64Value bananas = 4;
  repeated google.protobuf.Int32Value coins = 6;
  repeated google.protobuf.StringValue snacks = 7;
}

message SimpleWithMap {
  map<string, string> nameLookup = 2;
  map<int32, int32> intLookup = 3;
  // Ideally we'd test map<int64, int64> but we present maps as JS objects and `Long` cannot be used as a keys.
  map<string, int64> longLookup = 4;
}

message Numbers {
  double double = 1;
  float float = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint32 = 5;
  uint64 uint64 = 6;
  sint32 sint32 = 7;
  sint64 sint64 = 8;
  fixed32 fixed32 = 9;
  fixed64 fixed64 = 10;
  sfixed32 sfixed32 = 11;
  sfixed64 sfixed64 = 12;
  // repro https://github.com/stephenh/ts-proto/issues/187
  repeated uint64 manyUint64 = 13;
}
